--- a/PyLearn7-Assignment17/main.ui
+++ b/PyLearn7-Assignment17/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>395</height>
+    <width>356</width>
+    <height>442</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,16 +20,16 @@
    <widget class="QPushButton" name="btn_sum">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>230</y>
+      <x>240</x>
+      <y>280</y>
       <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
-      <pointsize>40</pointsize>
+      <family>Arial</family>
+      <pointsize>30</pointsize>
       <bold>false</bold>
      </font>
     </property>
@@ -43,7 +43,7 @@
    <widget class="QLineEdit" name="txtbox">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>60</x>
       <y>20</y>
       <width>241</width>
       <height>41</height>
@@ -53,16 +53,17 @@
    <widget class="QPushButton" name="btn_sub">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>180</y>
+      <x>240</x>
+      <y>230</y>
       <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
-      <pointsize>40</pointsize>
+      <family>Arial</family>
+      <pointsize>30</pointsize>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -75,16 +76,17 @@
    <widget class="QPushButton" name="btn_equal">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>280</y>
+      <x>240</x>
+      <y>330</y>
       <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
-      <pointsize>40</pointsize>
+      <family>Arial</family>
+      <pointsize>30</pointsize>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -97,15 +99,15 @@
    <widget class="QPushButton" name="btn_1">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>230</y>
-      <width>51</width>
+      <x>60</x>
+      <y>280</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -120,15 +122,15 @@
    <widget class="QPushButton" name="btn_2">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>230</y>
-      <width>51</width>
+      <x>120</x>
+      <y>280</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -143,15 +145,15 @@
    <widget class="QPushButton" name="btn_3">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>230</y>
-      <width>51</width>
+      <x>180</x>
+      <y>280</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -166,15 +168,15 @@
    <widget class="QPushButton" name="btn_6">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>180</y>
-      <width>51</width>
+      <x>180</x>
+      <y>230</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -189,15 +191,15 @@
    <widget class="QPushButton" name="btn_4">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>180</y>
-      <width>51</width>
+      <x>60</x>
+      <y>230</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -212,15 +214,15 @@
    <widget class="QPushButton" name="btn_5">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>180</y>
-      <width>51</width>
+      <x>120</x>
+      <y>230</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -235,15 +237,15 @@
    <widget class="QPushButton" name="btn_9">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>130</y>
-      <width>51</width>
+      <x>180</x>
+      <y>180</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -258,15 +260,15 @@
    <widget class="QPushButton" name="btn_8">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>130</y>
-      <width>51</width>
+      <x>120</x>
+      <y>180</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -281,15 +283,15 @@
    <widget class="QPushButton" name="btn_7">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>130</y>
-      <width>51</width>
+      <x>60</x>
+      <y>180</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -304,16 +306,17 @@
    <widget class="QPushButton" name="btn_mul">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>130</y>
+      <x>240</x>
+      <y>180</y>
       <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
-      <pointsize>40</pointsize>
+      <family>Arial</family>
+      <pointsize>30</pointsize>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -326,16 +329,17 @@
    <widget class="QPushButton" name="btn_div">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>80</y>
+      <x>240</x>
+      <y>130</y>
       <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
-      <pointsize>40</pointsize>
+      <family>Arial</family>
+      <pointsize>30</pointsize>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -345,18 +349,18 @@
      <string>÷</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_slash">
+   <widget class="QPushButton" name="btn_point">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>280</y>
-      <width>51</width>
+      <x>180</x>
+      <y>330</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -365,21 +369,27 @@
      <string notr="true">background-color:rgb(85, 170, 255)</string>
     </property>
     <property name="text">
-     <string>/</string>
+     <string>.</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_0">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>280</y>
-      <width>101</width>
+      <x>60</x>
+      <y>330</y>
+      <width>121</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -394,15 +404,15 @@
    <widget class="QPushButton" name="btn_clean">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>80</y>
-      <width>101</width>
+      <x>60</x>
+      <y>130</y>
+      <width>121</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -411,21 +421,21 @@
      <string notr="true">background-color:rgb(85, 170, 255)</string>
     </property>
     <property name="text">
-     <string>پ</string>
+     <string>c</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_percent">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>80</y>
-      <width>51</width>
+      <x>180</x>
+      <y>130</y>
+      <width>61</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>B Nazanin</family>
+      <family>Broadway</family>
       <pointsize>25</pointsize>
       <bold>false</bold>
      </font>
@@ -437,13 +447,181 @@
      <string>%</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btn_sin">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>100</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Broadway</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(255, 78, 184)</string>
+    </property>
+    <property name="text">
+     <string>sin</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_cos">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>100</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Broadway</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(255, 78, 184)</string>
+    </property>
+    <property name="text">
+     <string>cos</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>14</width>
+      <height>16</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_tan">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>100</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Broadway</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(255, 78, 184)</string>
+    </property>
+    <property name="text">
+     <string>tan</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>14</width>
+      <height>16</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_cot">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>100</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Broadway</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(255, 78, 184)</string>
+    </property>
+    <property name="text">
+     <string>cot</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>14</width>
+      <height>16</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_log">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>70</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Broadway</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(255, 78, 184)</string>
+    </property>
+    <property name="text">
+     <string>log</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_sqrt">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>70</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Broadway</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(255, 78, 184)</string>
+    </property>
+    <property name="text">
+     <string>√ </string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>14</width>
+      <height>16</height>
+     </size>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>304</width>
+     <width>356</width>
      <height>22</height>
     </rect>
    </property>
